manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend
  namespace: taskapp

spec:

  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:

    metadata:
      labels:
        app: backend

    spec:

      containers:

      - name: backend

        image: ghcr.io/ts-a-devops/taskapp-backend:5d6b8fc

        imagePullPolicy: IfNotPresent

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "500m"
            memory: "512Mi"

        ports:

        - containerPort: 5000
