manifests/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend
  namespace: taskapp

spec:

  selector:
    app: backend

  ports:

  - name: http
    port: 5000
    targetPort: 5000
