manifests/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend
  namespace: taskapp

spec:

  selector:
    app: frontend

  ports:

  - name: http
    port: 80
    targetPort: 5173
