manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: taskapp
  namespace: taskapp

spec:

  ingressClassName: traefik

  rules:

  - http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: frontend

            port:

              number: 80

      - path: /api

        pathType: Prefix

        backend:

          service:

            name: backend

            port:

              number: 5000
